# snowy

./: .gitmodules  CMakeLists.txt  TODO
dependencies/entt/: entt.hpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb/: stb_image.cpp  stb_image.h
src/: Log.cpp  Log.h  main.cpp  pch.h
src/Engine/: Core.h  Window.cpp  Window.h
src/Rendering/: CommandBuffer.cpp  CommandBuffer.h  RenderCommand.h
src/Rendering/Commands/: ClearRenderTargetCommand.cpp  ClearRenderTargetCommand.h
